# moraine

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Makefile  README.md  mkdocs.yml
.githooks/: pre-commit
.github/workflows/: release-moraine.yml
.worker-runs/changelog/: kimi-cli-ingest.md  opencode-sqlite-ingest.md
apps/moraine/: Cargo.toml
apps/moraine-ingest/: Cargo.toml
apps/moraine-mcp/: Cargo.toml
apps/moraine-monitor/: Cargo.toml
config/: moraine.toml
crates/moraine-clickhouse/: Cargo.toml
crates/moraine-config/: Cargo.toml
crates/moraine-conversations/: Cargo.toml
crates/moraine-ingest-core/: Cargo.toml
crates/moraine-mcp-core/: Cargo.toml
crates/moraine-monitor-core/: Cargo.toml
crates/moraine-privacy/: Cargo.toml
crates/moraine-privacy/src/: lib.rs
crates/moraine-source-status/: Cargo.toml
crates/moraine-source-status/src/: lib.rs
docs/: README.md
docs/architecture/: design-tradeoffs.md  workspace-ownership.md
docs/core/: data-model.md  ingestion-service.md  system-architecture.md  unified-trace-schema.md
docs/development/: sandbox.md
docs/mcp/: agent-interface.md
docs/operations/: backup-and-restore.md  build-and-operations.md  migration-guide.md  privacy-and-redaction.md  search-quality-evaluation.md  source-health-and-monitor.md
docs/roadmap/: feature-roadmap-2026-04-20.md  implementation-waves-2026-04-22.md
scripts/: install.sh
scripts/ci/: e2e-stack.sh  (+3 more)
sql/: 001_schema.sql  004_search_index.sql  011_rename_provider_to_harness.sql  012_add_inference_provider_and_rename_claude.sql  013_privacy_metadata.sql
(+106 files in other folders)
