[package]
name = "moraine-privacy"
version = "0.4.3"
edition = "2021"
description = "Privacy redaction and secret detection for Moraine"

[dependencies]
anyhow = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"
